fix vertical spacing

--- a/src/components/form/fields/MaskedTextField/MaskedTextField.module.scss
+++ b/src/components/form/fields/MaskedTextField/MaskedTextField.module.scss
@@ -3,6 +3,7 @@
 .hasSuffix {
     display: inline-block;
     position: relative;
+    margin-top: 0.53rem;
 
     div {
         position: absolute;
